# io-block

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
ci-config/: travis-doc-upload-key.enc  travis-doc-upload-key.pub  travis-doc-upload.cfg
examples/: blksz.rs
src/: file.rs  lib.rs  os.rs
src/os/: darwin.rs  linux.rs  mod.rs
