[package]
name = "io-block"
version = "0.2.2"
keywords = ["io", "block", "device"]
authors = ["Cody P Schafer <dev@codyps.com>"]
edition = "2021"
include = [ "Cargo.toml", "**/*.rs" ]
license = "MIT OR Apache-2.0"
description = "Work with block devices and other block-like things in rust"
repository = "https://github.com/jmesmon/io-block"
documentation = "https://docs.rs/io-block"

[dependencies]
cfg-if = "1"

[target.'cfg(any(target_os = "linux", target_vendor = "apple"))'.dependencies]
nix = "0.26"
